[tool.poetry]
name = "example-poetry"
version = "0.1.0"
description = ""
authors = ["Jan Stastny <honza@stastnarodina.com>"]
readme = "README.md"
packages = [{include = "example_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
